--- a/api/composer.json
+++ b/api/composer.json
@@ -27,8 +27,8 @@
         "leafs/leaf": "^3.3",
         "leafs/logger": "*",
         "leafs/cors": "*",
-        "leafs/auth": "*",
-        "leafs/db": "*"
+        "leafs/db": "*",
+        "leafs/auth": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.16"
