--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@unocss/nuxt": "^0.57.3",
     "@unocss/preset-attributify": "^0.57.3",
+    "@unocss/reset": "^0.57.3",
     "element-plus": "^2.4.2",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
